# anima-tagger

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.ja.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/booru/: Cargo.toml
crates/booru/src/: lib.rs
crates/captioner/: Cargo.toml
crates/captioner/src/: lib.rs  onnx.rs  openai.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  anima-tagger.toml.example
crates/core/src/: config.rs  export.rs  hub.rs  lib.rs  sidecar.rs  tag_group.rs  walk.rs
crates/gui/: Cargo.toml
crates/gui/src/: i18n.rs  main.rs
crates/tagger/: Cargo.toml
crates/tagger/src/: lib.rs
examples/: anima-tagger.toml
