[workspace]
resolver = "3"
members = ["crates/core", "crates/cli", "crates/gui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anima-tagger-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
toml = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
walkdir = "2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
