[package]
name = "anima-tagger-captioner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anima-tagger-core = { workspace = true }
ort = { workspace = true }
image = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
