[package]
name = "anima-tagger-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anima-tagger"
path = "src/main.rs"

[dependencies]
anima-tagger-core = { workspace = true }
anima-tagger-tagger = { workspace = true }
anima-tagger-captioner = { workspace = true }
anima-tagger-booru = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokenizers = { workspace = true }
serde_json = "1"
